--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -14,6 +14,7 @@ spa:
         # feed: "Nourrir"
         # fertilize: "Fertiliser"
         # grind: "Broyer"
+        # grow: "Se développer"
         # harvest: "Récolter"
         # hoe: "Biner"
         # implant: "Planter"
@@ -1715,6 +1716,7 @@ spa:
         # duck_manure: "Fumier de canard"
         # duck_slurry: "Lisier de canard"
         # electricity: "Électricité"
+        # employee: "Employé"
         # equipment: "Équipement"
         # equipment_building_division: "Emplacement de stockage du matériel"
         # escourgeon_barley_crop: "Orge d’hiver Escourgeon"
@@ -1730,6 +1732,7 @@ spa:
         # food_tank: "Silo à aliments"
         # forager: "Ensileuse"
         # fuel_tank: "Cuve à fioul"
+        # fungicide: "Fongicide"
         # garlic_crop: "Culture d’ail"
         # gas: "Gaz"
         # gasoline: "Essence"
@@ -1749,11 +1752,13 @@ spa:
         # hay_round_bales: "Botte de foin - balle ronde"
         # hay_small_rectangular_bales: "Botte de foin - petit format"
         # hazel_crop: "Culture de noisettier"
+        # hazel_seedling: "Plant de noisetier"
         # helianthus_herbicide: "Herbicide tournesol"
         # hen_compost: "Compost de poule"
         # hen_guano: "Guano de poule"
         # hen_manure: "Fumier de poule"
         # hen_slurry: "Lisier de poule"
+        # herbicide: "Herbicide"
         # hoe: "Bineuse"
         # horse_manure: "Fumier de cheval"
         # horsebean_crop: "Culture de féverolle"
@@ -1803,9 +1808,11 @@ spa:
         # plant_medicine_tank: "Réserve de produits phytosanitaires"
         # plow: "Charrue"
         # plum_crop: "Verger de pruniers"
+        # plum_seedling: "Plant de prunier"
         # poaceae_fungicide: "Fongicide céréales/graminées"
         # poaceae_herbicide: "Herbicide céréales/graminées"
         # potato_crop: "Culture de pomme de terre"
+        # pruning_platform: "plate-forme de taille"
         # rabbit_manure: "Fumier de lapin"
         # rape_crop: "Culture de colza"
         # reaper: "Moissonneuse-batteuse"
@@ -1920,6 +1927,7 @@ spa:
         # grape_reaper: "Machine à vendanger"
         # grass: "Herbe"
         # hay_rake: "Andaineur"
+        # hazel_seedling: "Plant de noisetier"
         # hen_band: "Bande de gallinacé"
         # herbicide: "Herbicide"
         # hoe: "Bineuse"
@@ -1947,6 +1955,8 @@ spa:
         # oyster_band: "Bande d’huître"
         # plant_medicine_tank: "Réserve de produits phytosanitaires"
         # plow: "Charrue"
+        # plum_seedling: "Plant de prunier"
+        # pruning_platform: "Plate-forme de taille"
         # reaper: "Moissonneuse-batteuse"
         # running_water: "Eau du réseau"
         # salmon_band: "Bande de saumon"
@@ -2209,12 +2219,14 @@ spa:
         # additive: "Additif"
         # alexis: "Alexis"
         # allium: "Ail"
+        # allo: "Allo"
         # amaranthaceae: "Amaranthaceae"
         # amaryllidaceae: "Amaryllidaceae"
         # anas: "Palmipède"
         # animal: "Animal"
         # animal_group: "Troupeau"
         # animal_medicine: "Médicament vétérinaire"
+        # anne_gold: "Anne gold"
         # antiseptic: "Antiseptique"
         # apache: "Blé Apache"
         # apiaceae: "Apiaceae"
@@ -2226,13 +2238,17 @@ spa:
         # avena: "Avena"
         # aventur: "Aventur"
         # aves: "Oiseau"
+        # awaso: "Awaso"
         # aztec: "Aztec"
         # baler: "Botteleuse"
         # bambusa: "Bambou"
+        # beauty: "Beauty"
+        # bernardina: "Bernardina"
         # beta: "Betterave"
         # betulaceae: "Betulaceae"
         # biensur: "Biensur"
         # bioproduct: "Produit vivant"
+        # bluefre: "Bluefre"
         # bos: "Bovin"
         # brassica: "Colza"
         # brassica_napus: "Colza"
@@ -2248,13 +2264,16 @@ spa:
         # capra: "Caprin"
         # carignan: "Carignan"
         # carmenere_noir: "Carménère noir"
+        # carpatin: "Carpatin"
         # chardonnay: "Chardonnay"
         # chemical_fertilizer: "Engrais minéral"
         # cichorium: "Chicoré"
         # cleaner: "Rabot"
         # colombar_blanc: "Colombar blanc"
         # compost: "Compost"
+        # corabel: "Corabel"
         # corylus: "Corylus"
+        # corylus_avellana: "Corylus avellana"
         # cot_noir: "Cot noir"
         # courtot: "Courtot"
         # cucumis: "Melon"
@@ -2266,6 +2285,7 @@ spa:
         # easement: "Aménagement foncier"
         # egg: "Oeuf"
         # electricity: "Electricité"
+        # ennis: "Ennis"
         # equipment: "Équipement"
         # equus: "Equin"
         # esperia: "Esperia"
@@ -2273,6 +2293,9 @@ spa:
         # excrement: "Engrais organiques"
         # fabaceae: "Fabaceae"
         # fabulis: "Fabulis"
+        # fercoril_corabel: "Fercoril corabel"
+        # feriale: "Feriale"
+        # fertile_coutard: "Fertile coutard"
         # food_deliver: "Désileuse"
         # forager: "Ensileuse"
         # fragaria: "Fraise"
@@ -2317,6 +2340,7 @@ spa:
         # lens: "Lentille"
         # lepus: "Lagomorphe"
         # levis: "Levis"
+        # lewis: "Lewis"
         # liliaceae: "Liliaceae"
         # linaceae: "Linaceae"
         # linum: "Lin"
@@ -2332,6 +2356,7 @@ spa:
         # medicine: "Médicament"
         # merlot_blanc: "Merlot blanc"
         # merlot_noir: "Merlot noir"
+        # merveille: "Merveille"
         # milk: "Lait"
         # mineral_matter: "Matière minérale"
         # miradoux: "Miradoux"
@@ -2349,6 +2374,7 @@ spa:
         # osteichthyes: "Poissons osseux"
         # ostreidae: "Ostreidae"
         # ovis: "Ovin"
+        # pauetet: "Pauetet"
         # pescadou: "Pescadou"
         # petit_verdot_noir: "Petit verdot noir"
         # phaseolus: "Haricot"
@@ -2365,6 +2391,8 @@ spa:
         # property_title: "Titre de propriété"
         # pruner: "Sécateur"
         # prunus: "Prunier"
+        # prunus_domestica: "Prunus domestica"
+        # prunus_salicina: "Prunus salicina"
         # qualital: "Qualital"
         # quality: "Quality"
         # quebon: "Quebon"
@@ -2384,6 +2412,7 @@ spa:
         # secale: "Secale"
         # seed: "Semence"
         # seedling: "Plant"
+        # segorbe: "Segorbe"
         # semillon_blanc: "Sémillon blanc"
         # service: "Service"
         # settlement: "Agencement"
@@ -2406,6 +2435,7 @@ spa:
         # tamaro: "Tamaro"
         # tank: "Réservoir"
         # texel: "Texel"
+        # tonda_giffoni: "Tonda giffoni"
         # tractor: "Tracteur"
         # trailer: "Remorque"
         # tremie: "Tremie"
