--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1593,27 +1593,27 @@ fra:
         complete_herbicide: "Herbicide total"
         coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vrac"
         coop:aviator_xpro_5l: "Aviator xpro 5l"
-        # coop:avoine_d'hiver_une_de_mai_red_25kg: "Coop:avoine d'hiver une de mai red 25kg"
-        coop:bd_s_miradoux_r1_cel_gold_net_25kg: "Semence de Blé tendre Miradoux ( r1 cel gold) sac de 25kg"
-        # coop:bd_s_tablur_r1_cel_gold_net_25kg: "Coop:bd s tablur r1 cel gold net 25kg"
-        # coop:bd_s_tablur_r1_gau+red_25kg: "Coop:bd s tablur r1 gau+red 25kg"
+        coop:avoine_d'hiver_une_de_mai_red_25kg: "avoine d'hiver une de mai red - sac de 25kg"
+        coop:bd_s_miradoux_r1_cel_gold_net_25kg: "Semence de Blé tendre Miradoux ( r1 cel gold) - sac de 25kg"
+        coop:bd_s_tablur_r1_cel_gold_net_25kg: "Semence de Blé dur tablur r1 cel gold net - sac de 25kg"
+        coop:bd_s_tablur_r1_gau+red_25kg: "Semence de Blé dur tablur r1 gau+red - sac de 25kg"
         coop:bth_s_ascott_r1_gau+_red_25kg: "Semence de Blé tendre Ascott (r1 gau+ red) sac de 25kg"
         coop:bth_s_caphorn_r1_gau+red_25kg: "Semence de Blé tendre Caphorn (r1 gau+ red) sac de 25kg"
         coop:bth_s_euclide_r1_gau+red_25kg: "Semence de Blé tendre Euclide (r1 gau+ red) sac de 25kg"
         coop:bth_s_rubisko_r1_gau+red_25kg: "Semence de Blé tendre Rubisko (r1 gau+ red) sac de 25kg"
         coop:chlorure_60%_gr_vr: "chlorure COOP 60% gr vrac"
-        # coop:elite_4_sc_5_l: "Coop:elite 4 sc 5 l"
-        # coop:esc_s_etincel_r1_gau+red_s25kg: "Coop:esc s etincel r1 gau+red s25kg"
+        coop:elite_4_sc_5_l: "Coop:elite 4 sc 5 l"
+        coop:esc_s_etincel_r1_gau+red_s25kg: "Semence d'orge d'hiver escourgeon etincel r1 gau+red sac de 25kg"
         coop:ficelle_filogamm_350_bob_5kg: "ficelle filogamm 350  - bobine 5kg"
-        # coop:ma.aallexia_50mg: "Coop:ma.aallexia 50mg"
-        # coop:ma.bergxxon_duo_50mg: "Coop:ma.bergxxon duo 50mg"
-        # coop:ma.bergxxon_duo_sonido_d50mg: "Coop:ma.bergxxon duo sonido d50mg"
-        # coop:ma.lg3490_50mg: "Coop:ma.lg3490 50mg"
-        # coop:ma.lg3490_sonido_d50mg: "Coop:ma.lg3490 sonido d50mg"
-        coop:metarex_ino_20kg: "metarex ino sac de 20kg"
+        coop:ma.aallexia_50mg: "Semence de maïs - aallexia - sac de 50.000 grains"
+        coop:ma.bergxxon_duo_50mg: "Semence de maïs -bergxxon duo - sac de 50.000 grains"
+        coop:ma.bergxxon_duo_sonido_d50mg: "Semence de maïs - bergxxon duo sonido d - sac de 50.000 grains"
+        coop:ma.lg3490_50mg: Semence de maïs - lg3490 - sac de 50.000 grains"
+        coop:ma.lg3490_sonido_d50mg: "Semence de maïs - lg3490 sonido d - sac de 50.000 grains"
+        coop:metarex_ino_20kg: "metarex ino - sac de 20kg"
         coop:metarex_rg_tds_20kg: "metarex rg tds - sac de 20kg"
-        # coop:nikeyl_5_l: "Coop:nikeyl 5 l"
-        # coop:prosaro_5_l: "Coop:prosaro 5 l"
+        coop:nikeyl_5_l: "Nikeyl 5 l"
+        coop:prosaro_5_l: "Prosaro 5 l"
         coop:sel_mer_essore_la_baleine_sac_25kg: "sel mer essore la baleine - sac de 25kg"
         coop:sorgho_ensilage_bmr_333_220mg: "Semence de sorgho ensilage bmr 333 220mg"
         coop:super_46%_gr._vr: "super 46% COOP gr vrac"
@@ -1671,6 +1671,7 @@ fra:
         hay_round_bales: "Botte de foin - balle ronde"
         hay_small_rectangular_bales: "Botte de foin - petit format"
         hazel_crop: "Culture de noisettier"
+        hazel_reaper: "Récolteuse de frutis à coques"
         hazel_seedling: "Plant de noisetier"
         helianthus_herbicide: "Herbicide tournesol"
         hen_compost: "Compost de poule"
@@ -1760,6 +1761,7 @@ fra:
         spring_barley_seed_25: "Semence d’orge de printemps - sac de 25kg"
         spring_oat_crop: "Culture d’avoine de printemps"
         strawberry_crop: "Culture de fraisier"
+        subsoil_plow: "Sous soleuse"
         sugar_vinasse: "Vinasse de sucrerie"
         sunflower_crop: "Culture de tournesol"
         sunflower_seed_150tg: "Semence de tournesol - sac de 150000 grains"
@@ -1888,6 +1890,7 @@ fra:
         salmon_band: "Bande de saumon"
         seed: "Semence"
         settlement: "Aménagement"
+        shell_fruit_reaper: "Récolteuse de fruits à coques"
         silage: "Ensilage"
         silage_division: "Zone de stockage de l’ensilage"
         small_equipment: "Petit matériel"
@@ -2090,7 +2093,7 @@ fra:
         kilowatt: "Kilowatt"
         kilowatt_hour: "Kilowatt par heure"
         liter: "Litre"
-        # liter_per_hectare: "Liter per hectare"
+        liter_per_hectare: "Litre par hectare"
         liter_per_square_meter: "litre par mètre carré"
         mass_percent: "Pourcentage de masse"
         megawatt: "Mégawatt"
@@ -2145,7 +2148,7 @@ fra:
       choices:
         # derivative_of: # Choices comes from nomenclature: varieties
       items:
-        # aallexia: "Aallexia"                             # zea
+        aallexia: "Aallexia"                             # zea
         acetal: "Acetal"                                   # animal_medicine
         actilact: "Actilact"                               # animal_medicine
         additive: "Additif"                                # plant_medicine
@@ -2175,7 +2178,7 @@ fra:
         baler: "Botteleuse"                                # equipment
         bambusa: "Bambou"                                  # poaceae
         beauty: "Beauty"                                   # prunus_salicina
-        # bergxxon: "Bergxxon"                             # zea
+        bergxxon: "Bergxxon"                             # zea
         bernardina: "Bernardina"                           # prunus_domestica
         beta: "Betterave"                                  # amaranthaceae
         betulaceae: "Betulaceae"                           # plant
@@ -2222,7 +2225,7 @@ fra:
         equipment: "Équipement"                            # matter
         equus: "Equin"                                     # mammalia
         esperia: "Esperia"                                 # triticum_aestivum
-        # etincel: "Etincel"                               # hordeum_hibernum
+        etincel: "Etincel"                               # hordeum_hibernum
         euclide: "Euclide"                                 # triticum_aestivum
         excrement: "Engrais organiques"                    # organic_matter
         fabaceae: "Fabaceae"                               # plant
@@ -2275,7 +2278,7 @@ fra:
         lepus: "Lagomorphe"                                # mammalia
         levis: "Levis"                                     # triticum_aestivum
         lewis: "Lewis"                                     # corylus_avellana
-        # lg3490: "Lg3490"                                 # zea
+        lg3490: "Lg3490"                                 # zea
         liliaceae: "Liliaceae"                             # plant
         linaceae: "Linaceae"                               # plant
         linum: "Lin"                                       # linaceae
