fix bug on telepac activities creation

--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1689,15 +1689,26 @@ arb:
         # complete_herbicide: "Herbicide total"
         # coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vrac"
         # coop:aviator_xpro_5l: "Aviator xpro 5l"
-        # coop:bd_s_miradoux_r1_cel_gold_net_25kg: "Semence de Blé tendre Miradoux ( r1 cel gold) sac de 25kg"
+        # coop:bd_s_miradoux_r1_cel_gold_net_25kg: "Semence de Blé tendre Miradoux ( r1 cel gold) - sac de 25kg"
+        # coop:bd_s_tablur_r1_cel_gold_net_25kg: "Semence de Blé dur tablur r1 cel gold net - sac de 25kg"
+        # coop:bd_s_tablur_r1_gau+red_25kg: "Semence de Blé dur tablur r1 gau+red - sac de 25kg"
         # coop:bth_s_ascott_r1_gau+_red_25kg: "Semence de Blé tendre Ascott (r1 gau+ red) sac de 25kg"
         # coop:bth_s_caphorn_r1_gau+red_25kg: "Semence de Blé tendre Caphorn (r1 gau+ red) sac de 25kg"
         # coop:bth_s_euclide_r1_gau+red_25kg: "Semence de Blé tendre Euclide (r1 gau+ red) sac de 25kg"
         # coop:bth_s_rubisko_r1_gau+red_25kg: "Semence de Blé tendre Rubisko (r1 gau+ red) sac de 25kg"
         # coop:chlorure_60%_gr_vr: "chlorure COOP 60% gr vrac"
+        # coop:elite_4_sc_5_l: "Coop:elite 4 sc 5 l"
+        # coop:esc_s_etincel_r1_gau+red_s25kg: "Semence d'orge d'hiver escourgeon etincel r1 gau+red sac de 25kg"
         # coop:ficelle_filogamm_350_bob_5kg: "ficelle filogamm 350  - bobine 5kg"
-        # coop:metarex_ino_20kg: "metarex ino sac de 20kg"
+        # coop:ma.aallexia_50mg: "Semence de maïs - aallexia - sac de 50.000 grains"
+        # coop:ma.bergxxon_duo_50mg: "Semence de maïs -bergxxon duo - sac de 50.000 grains"
+        # coop:ma.bergxxon_duo_sonido_d50mg: "Semence de maïs - bergxxon duo sonido d - sac de 50.000 grains"
+        # coop:ma.lg3490_50mg: "Semence de maïs - lg3490 - sac de 50.000 grains"
+        # coop:ma.lg3490_sonido_d50mg: "Semence de maïs - lg3490 sonido d - sac de 50.000 grains"
+        # coop:metarex_ino_20kg: "metarex ino - sac de 20kg"
         # coop:metarex_rg_tds_20kg: "metarex rg tds - sac de 20kg"
+        # coop:nikeyl_5_l: "Nikeyl 5 l"
+        # coop:prosaro_5_l: "Prosaro 5 l"
         # coop:sel_mer_essore_la_baleine_sac_25kg: "sel mer essore la baleine - sac de 25kg"
         # coop:sorgho_ensilage_bmr_333_220mg: "Semence de sorgho ensilage bmr 333 220mg"
         # coop:super_46%_gr._vr: "super 46% COOP gr vrac"
@@ -1755,6 +1766,7 @@ arb:
         # hay_round_bales: "Botte de foin - balle ronde"
         # hay_small_rectangular_bales: "Botte de foin - petit format"
         # hazel_crop: "Culture de noisettier"
+        # hazel_reaper: "Récolteuse de frutis à coques"
         # hazel_seedling: "Plant de noisetier"
         # helianthus_herbicide: "Herbicide tournesol"
         # hen_compost: "Compost de poule"
@@ -1844,6 +1856,7 @@ arb:
         # spring_barley_seed_25: "Semence d’orge de printemps - sac de 25kg"
         # spring_oat_crop: "Culture d’avoine de printemps"
         # strawberry_crop: "Culture de fraisier"
+        # subsoil_plow: "Sous soleuse"
         # sugar_vinasse: "Vinasse de sucrerie"
         # sunflower_crop: "Culture de tournesol"
         # sunflower_seed_150tg: "Semence de tournesol - sac de 150000 grains"
@@ -1965,6 +1978,7 @@ arb:
         # salmon_band: "Bande de saumon"
         # seed: "Semence"
         # settlement: "Aménagement"
+        # shell_fruit_reaper: "Récolteuse de fruits à coques"
         # silage: "Ensilage"
         # silage_division: "Zone de stockage de l’ensilage"
         # small_equipment: "Petit matériel"
@@ -2167,6 +2181,7 @@ arb:
         # kilowatt: "Kilowatt"
         # kilowatt_hour: "Kilowatt par heure"
         # liter: "Litre"
+        # liter_per_hectare: "Litre par hectare"
         # liter_per_square_meter: "litre par mètre carré"
         # mass_percent: "Pourcentage de masse"
         # megawatt: "Mégawatt"
@@ -2217,6 +2232,7 @@ arb:
     varieties:
       choices: #?
       items:
+        # aallexia: "Aallexia"
         # acetal: "Acetal"
         # actilact: "Actilact"
         # additive: "Additif"
@@ -2246,6 +2262,7 @@ arb:
         # baler: "Botteleuse"
         # bambusa: "Bambou"
         # beauty: "Beauty"
+        # bergxxon: "Bergxxon"
         # bernardina: "Bernardina"
         # beta: "Betterave"
         # betulaceae: "Betulaceae"
@@ -2292,6 +2309,7 @@ arb:
         # equipment: "Équipement"
         # equus: "Equin"
         # esperia: "Esperia"
+        # etincel: "Etincel"
         # euclide: "Euclide"
         # excrement: "Engrais organiques"
         # fabaceae: "Fabaceae"
@@ -2344,6 +2362,7 @@ arb:
         # lepus: "Lagomorphe"
         # levis: "Levis"
         # lewis: "Lewis"
+        # lg3490: "Lg3490"
         # liliaceae: "Liliaceae"
         # linaceae: "Linaceae"
         # linum: "Lin"
