--- a/config/locales/fra/procedures.yml
+++ b/config/locales/fra/procedures.yml
@@ -142,6 +142,6 @@ fra:
     base-straw_bunching: "Pressage de fourrages"
     base-superficial_plowing: "Déchaumage / Préparation du sol"
     base-uncompacting: "Décompactage"
-    base-vine_plant: "Plantation de vigne"
+    base-implant: "Plantation"
     base-wheat_crop: "Culture de blé (standard)"
     base-wine_transfer: "Transfert de vin"
