--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1593,7 +1593,7 @@ fra:
         complete_herbicide: "Herbicide total"
         coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vrac"
         coop:aviator_xpro_5l: "Aviator xpro 5l"
-        coop:avoine_d'hiver_une_de_mai_red_25kg: "avoine d'hiver une de mai red - sac de 25kg"
+        # coop:avoine_d'hiver_une_de_mai_red_25kg: "Coop:avoine d'hiver une de mai red 25kg"
         coop:bd_s_miradoux_r1_cel_gold_net_25kg: "Semence de Blé tendre Miradoux ( r1 cel gold) - sac de 25kg"
         coop:bd_s_tablur_r1_cel_gold_net_25kg: "Semence de Blé dur tablur r1 cel gold net - sac de 25kg"
         coop:bd_s_tablur_r1_gau+red_25kg: "Semence de Blé dur tablur r1 gau+red - sac de 25kg"
@@ -1608,7 +1608,7 @@ fra:
         coop:ma.aallexia_50mg: "Semence de maïs - aallexia - sac de 50.000 grains"
         coop:ma.bergxxon_duo_50mg: "Semence de maïs -bergxxon duo - sac de 50.000 grains"
         coop:ma.bergxxon_duo_sonido_d50mg: "Semence de maïs - bergxxon duo sonido d - sac de 50.000 grains"
-        coop:ma.lg3490_50mg: Semence de maïs - lg3490 - sac de 50.000 grains"
+        coop:ma.lg3490_50mg: "Semence de maïs - lg3490 - sac de 50.000 grains"
         coop:ma.lg3490_sonido_d50mg: "Semence de maïs - lg3490 sonido d - sac de 50.000 grains"
         coop:metarex_ino_20kg: "metarex ino - sac de 20kg"
         coop:metarex_rg_tds_20kg: "metarex rg tds - sac de 20kg"
@@ -2148,7 +2148,7 @@ fra:
       choices:
         # derivative_of: # Choices comes from nomenclature: varieties
       items:
-        aallexia: "Aallexia"                             # zea
+        aallexia: "Aallexia"                               # zea
         acetal: "Acetal"                                   # animal_medicine
         actilact: "Actilact"                               # animal_medicine
         additive: "Additif"                                # plant_medicine
@@ -2178,7 +2178,7 @@ fra:
         baler: "Botteleuse"                                # equipment
         bambusa: "Bambou"                                  # poaceae
         beauty: "Beauty"                                   # prunus_salicina
-        bergxxon: "Bergxxon"                             # zea
+        bergxxon: "Bergxxon"                               # zea
         bernardina: "Bernardina"                           # prunus_domestica
         beta: "Betterave"                                  # amaranthaceae
         betulaceae: "Betulaceae"                           # plant
@@ -2225,7 +2225,7 @@ fra:
         equipment: "Équipement"                            # matter
         equus: "Equin"                                     # mammalia
         esperia: "Esperia"                                 # triticum_aestivum
-        etincel: "Etincel"                               # hordeum_hibernum
+        etincel: "Etincel"                                 # hordeum_hibernum
         euclide: "Euclide"                                 # triticum_aestivum
         excrement: "Engrais organiques"                    # organic_matter
         fabaceae: "Fabaceae"                               # plant
@@ -2278,7 +2278,7 @@ fra:
         lepus: "Lagomorphe"                                # mammalia
         levis: "Levis"                                     # triticum_aestivum
         lewis: "Lewis"                                     # corylus_avellana
-        lg3490: "Lg3490"                                 # zea
+        lg3490: "Lg3490"                                   # zea
         liliaceae: "Liliaceae"                             # plant
         linaceae: "Linaceae"                               # plant
         linum: "Lin"                                       # linaceae
