--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1,6 +1,8 @@
 arb:
   actions:
-    authentication/passwords: #?
+    authentication/passwords:
+      # edit: "Changer votre mot de passe"
+      # new: "Nouveau mot de passe"
     authentication/sessions:
       destroy: "الخروج"
       new: "الدخول"
