--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -1,6 +1,8 @@
 eng:
   actions:
-    authentication/passwords: #?
+    authentication/passwords:
+      # edit: "Changer votre mot de passe"
+      # new: "Nouveau mot de passe"
     authentication/sessions:
       destroy: "Log out"
       new: "New session"
