--- a/config/locales/eng/devise.views.yml
+++ b/config/locales/eng/devise.views.yml
@@ -23,11 +23,11 @@ eng:
         message: "Your account has been locked due to an excessive amount of unsuccessful sign in attempts."
         subject: "Unlock Instructions"
     passwords:
-      edit:  #?
-        change_my_password: "Change my password" #?
-        change_your_password: "Change your password" #?
-        confirm_new_password: "Confirm new password" #?
-        new_password: "New password" #?
+      edit:
+        change_my_password: "Change my password"
+        change_your_password: "Change your password"
+        confirm_new_password: "Confirm new password"
+        new_password: "New password"
       new:
         forgot_your_password: "Forgot your password?"
         send_me_reset_password_instructions: "Send me reset password instructions"
