--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1,8 +1,8 @@
 fra:
   actions:
     authentication/passwords:
-      # edit: "Edit authentication/password"
-      # new: "New authentication/password"
+      edit: "Changer votre mot de passe"
+      new: "Nouveau mot de passe"
     authentication/sessions:
       destroy: "Se déconnecter" #?
       new: "Connexion"
