--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -1,6 +1,8 @@
 jpn:
   actions:
-    authentication/passwords: #?
+    authentication/passwords:
+      # edit: "Changer votre mot de passe"
+      # new: "Nouveau mot de passe"
     authentication/sessions:
       destroy: "ログアウト"
       new: "ログイン"
