Adds ChemicalElements nomenclature

--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -389,10 +389,142 @@ eng:
         # land: "Terroir"
     charts_of_accounts:
       items:
-        # fr_pcg82: "Plan comptable (PCG1982)"
-        # fr_pcga: "Plan comptable agricole (PCGA)"
+        # fr_pcg82: "Numéro dans le PCG1982"
+        # fr_pcga: "Numéro dans le PCGA"
         # ifrs: "IFRS"
       # name: "Plans de comptes"
+    chemical_elements:
+      items:
+        # actinium: "Actinium"
+        # aluminium: "Aluminium"
+        # americium: "Américium"
+        # antimony: "Antimoine"
+        # argon: "Argon"
+        # arsenic: "Arsenic"
+        # astatine: "Astate"
+        # barium: "Baryum"
+        # berkelium: "Berkélium"
+        # beryllium: "Béryllium"
+        # bismuth: "Bismuth"
+        # bohrium: "Bohrium"
+        # boron: "Bore"
+        # bromine: "Brome"
+        # cadmium: "Cadmium"
+        # caesium: "Césium"
+        # calcium: "Calcium"
+        # californium: "Californium"
+        # carbon: "Carbone"
+        # cerium: "Cérium"
+        # chlorine: "Chlore"
+        # chromium: "Chrome"
+        # cobalt: "Cobalt"
+        # copernicium: "Copernicium"
+        # copper: "Cuivre"
+        # curium: "Curium"
+        # darmstadtium: "Darmstadtium"
+        # dubnium: "Dubnium"
+        # dysprosium: "Dysprosium"
+        # einsteinium: "Einsteinium"
+        # erbium: "Erbium"
+        # europium: "Europium"
+        # fermium: "Fermium"
+        # flerovium: "Flérovium"
+        # fluorine: "Fluor"
+        # francium: "Francium"
+        # gadolinium: "Gadolinium"
+        # gallium: "Gallium"
+        # germanium: "Germanium"
+        # gold: "Or"
+        # hafnium: "Hafnium"
+        # hassium: "Hassium"
+        # helium: "Hélium"
+        # holmium: "Holmium"
+        # hydrogen: "Hydrogène"
+        # indium: "Indium"
+        # iodine: "Iode"
+        # iridium: "Iridium"
+        # iron: "Fer"
+        # krypton: "Krypton"
+        # lanthanum: "Lanthane"
+        # lawrencium: "Lawrencium"
+        # lead: "Plomb"
+        # lithium: "Lithium"
+        # livermorium: "Livermorium"
+        # lutetium: "Lutécium"
+        # magnesium: "Magnésium"
+        # manganese: "Manganèse"
+        # meitnerium: "Meitnerium"
+        # mendelevium: "Mendélévium"
+        # mercury: "Mercure"
+        # molybdenum: "Molybdène"
+        # neodymium: "Neodymium"
+        # neon: "Néon"
+        # neptunium: "Neptunium"
+        # nickel: "Nickel"
+        # niobium: "Niobium"
+        # nitrogen: "Azote"
+        # nobelium: "Nobélium"
+        # osmium: "Osmium"
+        # oxygen: "Oxygène"
+        # palladium: "Palladium"
+        # phosphorus: "Phosphore"
+        # platinum: "Platine"
+        # plutonium: "Plutonium"
+        # polonium: "Polonium"
+        # potassium: "Potassium"
+        # praseodymium: "Praseodymium"
+        # promethium: "Promethium"
+        # protactinium: "Protactinium"
+        # radium: "Radium"
+        # radon: "Radon"
+        # rhenium: "Rhénium"
+        # rhodium: "Rhodium"
+        # roentgenium: "Roentgenium"
+        # rubidium: "Rubidium"
+        # ruthenium: "Ruthénium"
+        # rutherfordium: "Rutherfordium"
+        # samarium: "Samarium"
+        # scandium: "Scandium"
+        # seaborgium: "Seaborgium"
+        # selenium: "Sélénium"
+        # silicon: "Silicium"
+        # silver: "Argent"
+        # sodium: "Sodium"
+        # strontium: "Strontium"
+        # sulfur: "Soufre"
+        # tantalum: "Tantale"
+        # technetium: "Technetium"
+        # tellurium: "Tellure"
+        # terbium: "Terbium"
+        # thallium: "Thallium"
+        # thorium: "Thorium"
+        # thulium: "Thulium"
+        # tin: "Étain"
+        # titanium: "Titane"
+        # tungsten: "Tungstène"
+        # ununoctium: "Ununoctium"
+        # ununpentium: "Ununpentium"
+        # ununseptium: "Ununseptium"
+        # ununtrium: "Ununtrium"
+        # uranium: "Uranium"
+        # vanadium: "Vanadium"
+        # xenon: "Xénon"
+        # ytterbium: "Ytterbium"
+        # yttrium: "Yttrium"
+        # zinc: "Zinc"
+        # zirconium: "Zirconium"
+      # name: "Éléments chimiques"
+      property_natures:
+        # atomic_number: "Numéro atomique"
+        # atomic_weight: "Masse atomique"
+        # boil_temperature: "Température d'ébullition"
+        # electro_negativity: "Électro-negativité"
+        # group: "Groupe"
+        # mass_density: "Densité massique"
+        # melt_temperature: "Température de fusion"
+        # period: "Période"
+        # specific_heat_capacity: "Capacité thermique"
+        # symbol: "Symbole"
     countries:
       items:
         ad: "Andorra"
