--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -3762,15 +3762,15 @@ fra:
         zone_property_title: "Titre de propriété terrienne"
     net_service:
       reference_name:
-        cartodb: "Cartodb"
-        charentes_alliance_extranet: "Charentes alliance extranet"
-        est_elevage: "Est élevage"
+        cartodb: "CartoDB"
+        charentes_alliance_extranet: "Charentes Alliance extranet"
+        est_elevage: "Est Élevage"
         lilco: "Lilco"
-        msa: "Msa"
-        selso: "Selso"
+        msa: "MSA"
+        selso: "SelSO"
         synel: "Synel"
         synest: "Synel Est"
-        telepac: "Telepac"
+        telepac: "TéléPAC"
     operation_task:
       nature:
         assisted_reading_task: "%{reporter} mesure %{indicator} avec %{tool}"
