--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1474,6 +1474,26 @@ fra:
       name: "Méthodes de calcul du bilan azoté"
       items:
         poitou_charentes: "Poitou charentes"
+    nmp_poitou_charentes_abacus_eight:
+      name: "Abaque 8 de la méthode de calcul de bilan azoté Poitou-Charentes"
+    nmp_poitou_charentes_abacus_five:
+      name: "Abaque 5 de la méthode de calcul de bilan azoté Poitou-Charentes"
+    nmp_poitou_charentes_abacus_four:
+      name: "Abaque 4 de la méthode de calcul de bilan azoté Poitou-Charentes"
+    nmp_poitou_charentes_abacus_nine:
+      name: "Abaque 9 de la méthode de calcul de bilan azoté Poitou-Charentes"
+    nmp_poitou_charentes_abacus_one:
+      name: "Abaque 1 de la méthode de calcul de bilan azoté Poitou-Charentes"
+    nmp_poitou_charentes_abacus_seven:
+      name: "Abaque 7 de la méthode de calcul de bilan azoté Poitou-Charentes"
+    nmp_poitou_charentes_abacus_six:
+      name: "Abaque 6 de la méthode de calcul de bilan azoté Poitou-Charentes"
+    nmp_poitou_charentes_abacus_ten:
+      name: "Abaque 10 de la méthode de calcul de bilan azoté Poitou-Charentes"
+    nmp_poitou_charentes_abacus_three:
+      name: "Abaque 3 de la méthode de calcul de bilan azoté Poitou-Charentes"
+    nmp_poitou_charentes_abacus_two:
+      name: "Abaque 2 de la méthode de calcul de bilan azoté Poitou-Charentes"
     phosphorus_analysis_methods:
       name: "Méthodes d’analyse du phosphore"
       items:
@@ -2158,6 +2178,8 @@ fra:
         silty_clay_soil: "Sol argilo-limoneux"
         swamp_peaty_soil: "Terre de marais tourbeux"
         valley_terrace_soil: "Sols de terrasse de vallée"
+    spatial_reference_systems:
+      name: "Systèmes de coordonnées spatiales"
     taxes:
       name: "Taxes"
       property_natures:
